<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homecards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/coinIcon"
            android:layout_width="97dp"
            android:layout_height="97dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >

<!--            <TextView-->
<!--                android:id="@+id/coinSymbol"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginLeft="35dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:text="@string/btc"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="15sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginStart="35dp"-->
<!--                android:layout_marginEnd="5dp" />-->

<!--            <TextView-->
<!--                android:id="@+id/coinDivider"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->

<!--                android:layout_gravity="center"-->
<!--                android:textSize="15sp"-->
<!--                android:textStyle="bold"-->
<!--                android:text="|"-->
<!--                android:gravity="center_horizontal" />-->

            <TextView
                android:id="@+id/coinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:textColor="#BF000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/bitcoin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="center">

        <TextView
            android:id="@+id/dollarSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/dollar_sign" />

        <TextView
            android:id="@+id/priceUsdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="12sp"
            android:textColor="#E1000000"
            android:text="@string/price"
            android:layout_marginStart="3dp"
            tools:ignore="SmallSp" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="15dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/oneHourText"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/OneHour"-->
<!--                android:textSize="15sp"/>-->

<!--            <TextView-->
<!--                android:id="@+id/percentChange1hText"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/OneHourPercentage"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:textColor="#E8000000" />-->

<!--            <TextView-->
<!--                android:id="@+id/twentyFourHoursText"-->
<!--                android:layout_marginLeft="55dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/TwentyFourHour" />-->

<!--            <TextView-->
<!--                android:id="@+id/percentChange24hText"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/TwentyFourHourPercentage"/>-->

<!--            <TextView-->
<!--                android:id="@+id/daysText"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="55dp"-->
<!--                android:text="@string/SevenDays" />-->

<!--            <TextView-->
<!--                android:id="@+id/percentChange7dayText"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/SevenDayPercentage" />-->

<!--        </LinearLayout>-->

    </LinearLayout>
</androidx.cardview.widget.CardView>